added working REST

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <ul>
           <li><a href="#!/home">Hem</a></li>
           <li><a href="#!/stats">Statistik</a></li>
+          <li><a href="#!/cities">Städer</a></li>
+          <li><a href="#!/charts">Grafer</a></li>
         </ul>
       </nav>
     </section>
